# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Fix http.get_url function when used with https scheme. Previously,
  plaintext http to port 443 was attempted first. [jah]

o Use a mutex on Windows to avoid a hang when accessing WinPCAP driver.
  Reported by multiple users on Windows 8.1 and Windows Server 2012 R2.
  Nmap hangs when the WinPCAP driver is accessed via OpenServiceA by multiple
  processes at once. Users report that this change, which uses a mutex to avoid
  concurrent access, fixes the hang. [Daniel Miller]

o [NSE] Enhanced reporting of elliptic curve names and strengths in
  ssl-enum-ciphers. The name of the curve is now reported instead of just "ec"
  [Brandon Paulsen]

o [NSE] Added knx-gateway-discover and knx-gateway-info scripts for gathering
  information from multicast and unicast KNX gateways, which connect home
  automation systems to IP networks. [Niklaus Schiess, Dominik Schneider]

o Disable TPACKET_V3 in our included libpcap. This version of the Linux kernel
  packet ring API has problems that result in lots of lost packets. This patch
  falls back to TPACKET_V2 or earlier versions if available. [nnposter]

o Output a warning when deprecated options are used, and suggest the preferred
  option. Currently deprecated: -i -o -m -sP -P0 -PN -oM -sR. The warning is
  only visible with -v. [Daniel Miller]

o [NSE] Added script http-ls. Parses web server directory index pages with
  optional recursion. [Pierre Lalet]

o [NSE] [GH#106] Added a new NSE module, ls.lua, for accumulating and
  outputting file and directory listings. The afp-ls, nfs-ls, and smb-ls
  scripts have been converted to use this module. [Pierre Lalet]

o Fix Nmap's DTD, which did not recognize that the script element could contain
  character data when a script returns a number or a boolean.
  [Jonathan Daugherty]

o [GH#75] Normalize check targets to standard format check-*.
  [Gioacchino Mazzurco]
